--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -575,7 +575,7 @@ label {
 .related-game {
   margin-top: 20px !important;
   font-family: 'FontAwesome' !important;
-  box-shadow: 1px 3px 5px #333;
+  box-shadow: 0px 2px 2px #f5e2e2;
   padding: 20px 0px;
   font-weight: 900;
   font-size: 20px;
@@ -584,7 +584,7 @@ label {
 .list-related-game {
   margin-top: 20px !important;
   font-family: 'FontAwesome' !important;
-  box-shadow: 1px 1px 4px #a28989;
+  box-shadow: 1px 1px 4px #e2e2e2;
   padding: 20px 0px;
 }
 
