--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -40,8 +40,15 @@
 
             <div class="owl-carousel new-game">
               <% @game_news.each do |game| %>
-              <div>
-                <%= image_tag(game.photos.last.image, :class => "img-responsive") %>
+              <div class="container-top-game">
+                <%= image_tag(game.photos.last.image, :class => "img-responsive image") %>
+                <div class="overlay">
+                <%=link_to game_detail_path(id: game.id) do %>
+                  <div class="text"><%= game.name %>
+                    <br><strong><%= game.relase_date.strftime("%F") %></strong>
+                  </div>
+                <%end%>
+                </div>
               </div>
               <% end %>
             </div>
@@ -54,10 +61,10 @@
           <% @game_top.each do |game| %>
           <div class="col-md-12 fix-pading-content">
             <div class="col-xs-12 col-md-4">
-              <%= image_tag(game.photos.first.image, :class => "img-responsive") %>
+              <%=link_to game_detail_path(id: game.id) do %> <%= image_tag(game.photos.first.image, :class => "img-responsive fix-box-img-top-game") %><%end%>
             </div>
-            <div class="col-xs-12 col-md-8">
-              <div class="about-text">
+            <div class="col-xs-12 col-md-8 content-game-home-page">
+              <div class="about-text col-md-12">
                 <h4><%=link_to game_detail_path(id: game.id) do %> <%= game.name %><%end%> </h4>
               </div>
               <div class="col-xs-12 col-md-5">
@@ -73,7 +80,7 @@
                 <% end %>
               </div>
               <div class="col-md-12">
-                <p><%= game.summary %> <a href="#">more...</a></p>
+                <p ><%= game.summary %> <a href="#">more...</a></p>
               </div>
             </div>
           </div>
@@ -115,8 +122,8 @@
         <div class="col-md-12 text-center related-game ">Upcoming Games</div>
         <% @game_upcoming.each do |game| %>
         <div class="col-md-12 text-center list-related-game">
-          <a href="#"><strong><%= game.name %></strong>
-            <hr>
+          <a href="#"><strong> <%=link_to game_detail_path(id: game.id) do %> <%= game.name %><%end%></strong>
+            <br>
             <strong><%= game.relase_date.strftime("%F") %></strong>
           </a>
         </div>
