--- a/app/views/user_profile/home.html.erb
+++ b/app/views/user_profile/home.html.erb
@@ -106,14 +106,14 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <span>
-                                <h1 class="panel-title pull-left" style="font-size:30px;"><%=current_user.full_name%> <small><%= current_user.email%></small> <i class="fa fa-check text-success" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="John Doe is sharing with you"></i></h1>
+                                <h1 class="panel-title pull-left" style="font-size:30px;"><%=@user.full_name%> <small><%= @user.email%></small> <i class="fa fa-check text-success" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="John Doe is sharing with you"></i></h1>
                             </span>
                             <br><br><hr>
                         </div>
                     </div>
                     <hr>
                     <!-- Sample post content with comments. -->
-                    <%current_user.reviews.each do |review| %>
+                    <%@reviews.each do |review| %>
                          <div class="panel panel-default">
                             <div class="panel-body">
                                 <div class="pull-left">
@@ -121,7 +121,7 @@
                                         <img class="media-object img-circle" src="https://lut.im/7JCpw12uUT/mY0Mb78SvSIcjvkf.png" width="50px" height="50px" style="margin-right:8px; margin-top:-5px;">
                                     </a>
                                 </div>
-                                <h4><a href="#" style="text-decoration:none;"><strong><%=current_user.full_name%></strong></a> – <small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> <%= time_ago_in_words(review.created_at) %> ago</i></a></small></small></h4>
+                                <h4><a href="#" style="text-decoration:none;"><strong><%=@user.full_name%></strong></a> – <small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> <%= time_ago_in_words(review.created_at) %> ago</i></a></small></small></h4>
                                 <span>
                                     <div class="navbar-right">
                                         <div class="dropdown">
@@ -148,16 +148,16 @@
                                 <hr>
                                 <div class="col-md-12">
                                     <div class="pull-left btn-group-xs">
-                                        <a class="btn btn-default btn-xs"><i class="fa fa-heart" aria-hidden="true"></i> Like</a> 425
+                                        <a class="btn btn-default btn-xs"><i class="fa fa-heart" aria-hidden="true"></i> Like</a> <%=review.likes.count()%>
                                     </div>
                                     <br>
                                 </div>
                                 <hr>
                                 <div>
-                                    <%if Comment.where(review_id: review.id).count() > 2 %>
-                                        <a class="btn btn-default btn-xs"><i class="fa fa-bars" aria-hidden="true"></i> Show <%=Comment.where(review_id: review.id).count() - 2%> more comments</a>
+                                    <%if review.comments.count() > 2 %>
+                                        <a class="btn btn-default btn-xs"><i class="fa fa-bars" aria-hidden="true"></i> Show <%=review.comments.count() - 2%> more comments</a>
                                     <%end%>
-                                    <%Comment.where(review_id: review.id).each do |comment|%>
+                                    <%review.comments.each do |comment|%>
                                         <hr>
                                         <div class="post-content">
                                             <div class="panel-default">
@@ -169,7 +169,7 @@
                                                     </div>
                                                     <h4>
                                                     <a href="#" style="text-decoration:none;"><strong>
-                                                    <%=User.find(comment.user_id).full_name%></strong></a></h4>
+                                                    <%=comment.user.full_name%></strong></a></h4>
                                                     <hr>
                                                     <div class="post-content">
                                                         <%=comment.content%>
@@ -202,6 +202,7 @@
                 <div class="tab-pane" id="Like">
                     <br><br>
                     <!-- Simple post content example. -->
+                    <%@reviews_like.each do |review| %>
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="pull-left">
@@ -209,7 +210,7 @@
                                     <img class="media-object img-circle" src="https://lut.im/7JCpw12uUT/mY0Mb78SvSIcjvkf.png" width="50px" height="50px" style="margin-right:8px; margin-top:-5px;">
                                 </a>
                             </div>
-                            <h4><a href="#" style="text-decoration:none;"><strong>John Doe</strong></a> – <small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> 42 minutes ago</i></a></small></small></h4>
+                            <h4><a href="#" style="text-decoration:none;"><strong>review.user.full_name</strong></a> – <small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> <%= time_ago_in_words(review.created_at) %> ago</i></a></small></small></h4>
                             <span>
                                 <div class="navbar-right">
                                     <div class="dropdown">
@@ -230,23 +231,25 @@
                             </span>
                             <hr>
                             <div class="post-content">
-                                <p>Simple post content example.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel gravida metus, non ultrices sapien. Morbi odio metus, dapibus non nibh id amet.</p>
+                                <h3><%=review.title%></h3>
+                                <p><%=review.content%></p>
                             </div>
                             <hr>
                             <div class="col-md-12">
                                 <div class="pull-left btn-group-xs">
-                                    <a class="btn btn-default btn-xs"><i class="fa fa-heart" aria-hidden="true"></i> Like</a> 425
+                                    <a class="btn btn-default btn-xs"><i class="fa fa-heart" aria-hidden="true"></i> Like</a> <%=review.likes.count%>
                                 </div>
                                 <br>
                             </div>
                             <hr>
                         </div>
                     </div>
+                    <%end%>
+                    
                 </div><!--/tab-pane-->
                 <div class="tab-pane" id="Comment">
                     <br><br>
-                    <!-- Reshare Example -->
+                    <%@reviews_comment.each do |review| %>
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="pull-left">
@@ -254,7 +257,7 @@
                                     <img class="media-object img-circle" src="https://lut.im/7JCpw12uUT/mY0Mb78SvSIcjvkf.png" width="50px" height="50px" style="margin-right:8px; margin-top:-5px;">
                                 </a>
                             </div>
-                            <h4><a href="#" style="text-decoration:none;"><strong>John Doe</strong></a> – <small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> 42 minutes ago</i></a></small></small></h4>
+                            <h4><a href="#" style="text-decoration:none;"><strong>review.user.full_name</strong></a> – <small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> <%= time_ago_in_words(review.created_at) %> ago</i></a></small></small></h4>
                             <span>
                                 <div class="navbar-right">
                                     <div class="dropdown">
@@ -275,61 +278,21 @@
                             </span>
                             <hr>
                             <div class="post-content">
-                                <div class="panel panel-default">
-                                    <div class="panel-body">
-                                        <div class="pull-left">
-                                            <a href="#">
-                                                <img class="media-object img-circle" src="https://diaspote.org/uploads/images/thumb_large_283df6397c4db3fe0344.png" width="50px" height="50px" style="margin-right:8px; margin-top:-5px;">
-                                            </a>
-                                        </div>
-                                        <h4><a href="#" style="text-decoration:none;"><strong>✪ SтeғOғғιcιel ✪ ツ</strong></a> – <small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> about 15 hours ago</i></a></small></small></h4>
-                                        <hr>
-                                        <div class="post-content">
-                                            Reshare post example.
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel gravida metus, non ultrices sapien. Morbi odio metus, dapibus non nibh id amet.</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel gravida metus, non ultrices sapien. Morbi odio metus, dapibus non nibh id amet.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="post-content">
-                                    <div class="panel-default">
-                                        <div class="panel-body">
-                                            <div class="pull-left">
-                                                <a href="#">
-                                                    <img class="media-object img-circle" src="https://lut.im/7JCpw12uUT/mY0Mb78SvSIcjvkf.png" width="35px" height="35px" style="margin-right:8px; margin-top:-5px;">
-                                                </a>
-                                            </div>
-                                            <h4><a href="#" style="text-decoration:none;"><strong>John Doe </strong></a></h4>
-                                            <hr>
-                                            <div class="post-content">
-                                                Comment example.<br><br>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at arcu sapien. Donec laoreet, nisl quis tempor hendrerit, libero augue blandit turpis, in dignissim odio mauris eu tortor. Ut hendrerit ipsum elit, a elementum nulla ultrices eu. In posuere mollis efficitur. Maecenas justo turpis, tristique sit amet ultricies quis, molestie eget ex. Nam vestibulum consequat tincidunt. Morbi vitae placerat sapien. Phasellus quis mi tincidunt sem scelerisque tincidunt. Ut viverra porttitor sagittis. Phasellus aliquam auctor purus, id sollicitudin mauris pulvinar ac. Vivamus vel erat nec orci ultricies iaculis quis sit amet augue. Vestibulum aliquam felis lorem, interdum porttitor sapien sodales ac. Maecenas id ullamcorper risus. Suspendisse id dui sed urna rutrum pharetra. Nam eu lectus et orci vestibulum bibendum. Mauris et pulvinar dui, ac facilisis leo.
-                                                <br><small><small><a href="#" style="text-decoration:none; color:grey;"><i><i class="fa fa-clock-o" aria-hidden="true"></i> 12 minutes ago</i></a></small></small>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <h3><%=review.title%></h3>
+                                <p><%=review.content%></p>
                             </div>
                             <hr>
                             <div class="col-md-12">
                                 <div class="pull-left btn-group-xs">
-                                    <a class="btn btn-default btn-xs"><i class="fa fa-heart" aria-hidden="true"></i> Like</a> 425
+                                    <a class="btn btn-default btn-xs"><i class="fa fa-heart" aria-hidden="true"></i> Like</a> <%=review.likes.count%>
                                 </div>
                                 <br>
                             </div>
                             <hr>
-                            <div class="media">
-                                <div class="pull-left">
-                                    <a href="#">
-                                        <img class="media-object img-circle" src="https://lut.im/7JCpw12uUT/mY0Mb78SvSIcjvkf.png" width="35px" height="35px" style="margin-left:3px; margin-right:-5px;">
-                                    </a>
-                                </div>
-                                <div class="media-body">
-                                    <textarea class="form-control" rows="1" placeholder="Comment"></textarea>
-                                </div>
-                            </div>
                         </div>
                     </div>
+                    <%end%>
+                    <!-- Reshare Example -->
                     <hr>
                 </div><!--/tab-pane-->
             </div><!--/tab-content-->
