--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -17,7 +17,7 @@
         <div class="col-md-12">
           <div class="col-xs-12 col-md-4">
             <%= link_to game_detail_path(id: @review.game_id) do %>
-            <%= image_tag(@game.photos.first.image, :class => "img-responsive") %>
+              <%= image_tag(@game.photos.first.image, :class => "img-responsive") %>
             <% end %>
           </div>
           <div class="col-xs-12 col-md-8">
@@ -30,25 +30,25 @@
                 <% if @review.rating != nil %>
                   <p><%= @review.rating.round(1) %> Point</p>
                 <% end %>
-              </div class= "name-user col-md-3">
+              </div>
               <hr>
-                  <p>created by <%= @review.user.full_name%> at <%= @review.created_at.to_date%></p>
+              <p>created by <%= @review.user.full_name %> at <%= @review.created_at.to_date %></p>
               <hr>
-                <% if user_signed_in? and @review.likes.where(user_id: current_user.id).count != 0 %>
+              <% if user_signed_in? and @review.likes.where(user_id: current_user.id).count != 0 %>
                 <span><%= @review.likes.count %></span>
                 <span>
                   <%= link_to like_path(likeable_type: "Review", likeable_id: @review.id), method: :delete do %>
                 <strong><i class="fa fa-thumbs-o-up fa-2x" aria-hidden="true"></i>
                 </strong>
-                </span>
+                    </span>
                 <% end %>
               <% else %>
                 <span>
                 <span><%= @review.likes.count %></span>
-                <%= link_to likes_path(likeable_type: "Review", likeable_id: @review.id), method: :post do %>
+                  <%= link_to likes_path(likeable_type: "Review", likeable_id: @review.id), method: :post do %>
                 <strong><i class="fa fa-thumbs-o-up fa-2x" aria-hidden="true"></i>
                 </strong>
-                </span>
+                    </span>
                 <% end %>
               <% end %>
               <hr>
@@ -64,7 +64,7 @@
               <% if user_signed_in? and @review.user_id == current_user.id %>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
                   Edit your Review
-                <button>
+                </button>
               <% end %>
             </div>
           </div>
@@ -84,34 +84,46 @@
                     <div class="name-user col-md-3"><%= comment.user.full_name %>
                     </div>
                     <div class="col-md-3 star-user">
-                      <div class="text-right"><%= comment.created_at.to_date() %></div>
+                      <div class="text-right"><%= time_ago_in_words(comment.created_at) %></div>
                     </div>
                   </div>
                   <div class="col-md-12">
                     <p><%= comment.content %></p>
                     <div>
-                      <strong><%= comment.likes.count %> Likes </strong>
-                      <% if user_signed_in? and comment.likes.where(user_id: current_user.id).count == 0 %>
-                        <%= link_to like_path(comment.id, likeable_type: "Comment", likeable_id: comment.id), method: :delete do %>
-                          <b class="fa fa-thumbs-o-up" aria-hidden="true"></b>
+                      <% if user_signed_in? and comment.likes.where(user_id: current_user.id).count != 0 %>
+                        <span><%= comment.likes.count %></span>
+                        <span><%= link_to like_path(likeable_type: "Comment", likeable_id: comment.id), method: :delete do %>
+                          <strong><i class="fa fa-thumbs-o-up fa-2x" aria-hidden="true"></i>
+                          </strong>
+                        </span>
                         <% end %>
-                      <% else %>
-                        
-                        <%= link_to likes_path(likeable_type: "Comment", likeable_id: comment.id), method: :post do %>
-                          <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                        <% end %>
+                        <% else %>
+                        <span><%= comment.likes.count %></span>
+                            <%= link_to likes_path(likeable_type: "Comment", likeable_id: comment.id), method: :post do %>
+                          <strong><i class="fa fa-thumbs-o-up fa-2x" aria-hidden="true"></i>
+                          </strong>
+                              </span>
+                          <% end %>
                       <% end %>
-                      <%# if current_user == comment.user %>
-<!--                        <strong><%#= link_to edit_review_path(id: comment.review_id) do %> Edit-->
-<!--                          <%# end %>|-->
-<!--                          <%#= link_to review_path(id: review.id), method: :delete, remote: true do %> Delete-->
-                          <%# end %>
-<!--                        </strong>-->
-                      <%# end %>
+                      <% if current_user == comment.user %>
+                        <strong><%= link_to edit_review_comment_path(review_id: @review.id, comment_id: comment.id) do %>
+                            Edit
+                          <% end %>|
+                          <%= link_to review_comment_path(review_id: @review.id, comment_id: comment.id), method: :delete do %>
+                            Delete
+                          <% end %>
+                        </strong>
+                      <% end %>
                     </div>
                   </div>
                 </div>
               </div>
+            <% end %>
+            <br><br>
+            <%= form_for [@review, Comment.new] do |f| %>
+              <%= f.text_field :content, placeholder: "Add a comment" %>
+              <%= hidden_field_tag :review_id, params[@review.id] %>
+              <%= f.submit "Add Comment" %>
             <% end %>
           </div>
         </div>
@@ -263,7 +275,7 @@
             <div class="form-group">
               <label for="title">Title</label>
               <!-- <input type="text" class="form-control" id="title"> -->
-              <%= f.text_field :title, placeholder: @review.title, class: "form-control",required: "required"%>
+              <%= f.text_field :title, placeholder: @review.title, class: "form-control", required: "required" %>
             </div>
             <div class="form-group">
               <label for="rate">Reating</label>
