in-place edit comment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,8 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import 'owlcarousel2/owl.carousel';
+@import 'bootstrap3-editable/bootstrap-editable';
+
 
 #about img {
     padding: 3px;
