--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -201,7 +201,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 /* About Section */
 #about {
   padding: 110px 0;
-  background: #f6f6f6;
+  /*background: #f6f6f6;*/
 }
 #about h3 {
   font-size: 22px;
