--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -33,6 +33,7 @@
               <hr>
               <p>created by <%= @review.user.full_name %> at <%= @review.created_at.to_date %></p>
               <hr>
+              <div>
               <% if user_signed_in? and @review.likes.where(user_id: current_user.id).count != 0 %>
                 <span><%= @review.likes.count %></span>
                 <span>
@@ -50,6 +51,7 @@
                     </span>
                 <% end %>
               <% end %>
+              </div>
               <hr>
             </div>
           </div>
