add up coming in deatils game

--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -224,61 +224,7 @@
       </div>
       <div class="col-md-3">
         <div class="row ">
-          <div class="col-md-12 text-center related-game ">Related Game</div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 1</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 2</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 3</strong>
-              <hr>
-              <strong>15-11-2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 4</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 5</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 6</strong>
-              <hr>
-              <strong>15-11-2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 7</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 8</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 9</strong>
-              <hr>
-              <strong>15-11-2018</strong>
-            </a>
-          </div>
+          <%= render 'game_up_comming' %>
         </div>
       </div>
     </div>
