--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -119,15 +119,7 @@
             <button type="submit" class="btn btn-primary">Search</button>
           </form>
         </div>
-        <div class="col-md-12 text-center related-game ">Upcoming Games</div>
-        <% @game_upcoming.each do |game| %>
-        <div class="col-md-12 text-center list-related-game">
-          <a href="#"><strong> <%=link_to game_detail_path(id: game.id) do %> <%= game.name %><%end%></strong>
-            <br>
-            <strong><%= game.relase_date.strftime("%F") %></strong>
-          </a>
-        </div>
-        <% end %>
+        <%= render 'game_up_comming' %>
       </div>
     </div>
   </div>
