--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -470,7 +470,10 @@ label {
 }
 
 /*############################ Header_Game*/
-
+.star_home_page {
+  float: left;
+  margin-top: -6px;
+}
 .header_shousai_game {
   float: left;
   margin-left :15px;
