--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -33,7 +33,7 @@
               <hr>
               <p>created by <%= @review.user.full_name %> at <%= @review.created_at.to_date %></p>
               <hr>
-              <!--<div id="send_like_<%= @review.id %>">-->
+              <!--<div id="send_like_<%= @review.id %>_Review">-->
               <!--<% if user_signed_in? and @review.likes.where(user_id: current_user.id).count != 0 %>-->
               <!--  <span><%= @review.likes.count %></span>-->
               <!--  <span>-->
