--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#send_like_<%= @object.id %>').html('<%= j render "reviews/like" , object: @object %>');
+$('#send_like_<%= @object.id %>_<%= @object.class %>').html('<%= j render "reviews/like" , object: @object %>');
