--- a/app/views/reviews/_like.html.erb
+++ b/app/views/reviews/_like.html.erb
@@ -1,13 +1,22 @@
-<div id="send_like_<%= object.id %>">
+<div id="send_like_<%= object.id %>_<%= object.class %>">
 <% if user_signed_in? and object.likes.where(user_id: current_user.id).count != 0 %>
 <span><%= object.likes.count %>
 </span>
-<span><%= link_to like_path(object.id, likeable_type: object.class, likeable_id: object.id), method: :delete, remote: true do %>
+<% if not user_signed_in? %>
+<span><%= link_to like_path(object.id, likeable_type: object.class, likeable_id: object.id), method: :delete do %>
 	<strong>
 		<strong><i class="fa fa-thumbs-up fa-lg" aria-hidden="true" style="color:#3577e5"></i>
 	</strong>
 </span>
 <% end %>
+<% else %>
+<span><%= link_to like_path(object.id, likeable_type: object.class, likeable_id: object.id), method: :delete, remote: true do %>
+	<strong>
+		<strong><i class="fa fa-thumbs-up fa-lg" aria-hidden="true" style="color:#3577e5"></i>
+	</strong>
+</span>
+<%end%>
+<%end%>
 <% else %>
 <span>
 	<span><%= object.likes.count %>
