--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -124,7 +124,7 @@
                     </div>
                     <div class="col-md-3 star-user">
                       <div class="star_home_page stars-outer">
-                        <div class="stars-inner" style="width: <%= review.rating*20 %>%"></div>
+                        <div class="stars-inner" style="width: <%= get_rating_reivew(review)*20 %>%"></div>
                       </div>
                     </div>
                     <div class="col-md-3 star-user">
