--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -10,18 +10,23 @@
           <div class="col-xs-12 col-md-7">
             <div class="about-text">
               <h2><%= @game.name %></h2>
-              <div class="header_shousai_game_star stars-outer">
-                <div class="stars-inner" style="width: <%= @game.reviews.average(:rating).round(1)*20 %>%"></div>
-              </div>
+              <% if @game.reviews.average(:rating) != nil %>
+                <div class="header_shousai_game_star stars-outer">
+                  <div class="stars-inner" style="width: <%= @game.reviews.average(:rating).round(1)*20 %>%"></div>
+                </div>
+              <% else %>
+                No rating
+              <% end %>
+
               <div class="header_shousai_game">
                 <% if @game.reviews.average(:rating) != nil %>
                   <p><%= @game.reviews.average(:rating).round(1) %> Point</p>
-                <% else %>
-                  <p>No rating</p>
+                <%# else %>
+<!--                  <p>No rating</p>-->
                 <% end %>
               </div>
               <div class="header_shousai_game">
-                <% if @game.reviews.count() != nil %>
+                <% if @game.reviews.count() != 0 %>
                   <p><%= @game.reviews.count() %> rating</p>
                 <% end %>
               </div>
@@ -34,7 +39,7 @@
                 <span>
                   <% @game.platform_of_game.each_with_index do |platform, index| %>
                     <%= index == 0 ? "" : "," %>
-                    <%= platform.name %>
+                    <%= link_to platform.name, game_game_list_of_platform_path(:platform => platform.name) %>
                   <% end %>
                 </span>
                 <br><br>
@@ -42,7 +47,7 @@
                 <span>
                   <% @game.genres_of_game.each_with_index do |genre, index| %>
                     <%= index == 0 ? "" : "," %>
-                    <%= genre.name %>
+                    <%= link_to genre.name, game_game_list_of_genre_path(:genre => genre.name)%>
                   <% end %>
                 </span>
               </div>
@@ -76,19 +81,19 @@
             <% end %>
 
             <div class="create_review_button">
-                    <% if user_signed_in? and @game.reviews.where(user_id: current_user.id).count != 0 %>
+              <% if user_signed_in? and @game.reviews.where(user_id: current_user.id).count != 0 %>
 
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
-                        Edit your Review
-                        </button>
-                     <% else %>
-                      <% @review = Review.new %>
-                          <!-- <button type="button" class="btn btn-danger">Create New Review</button> -->
-                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
-                        Create New Review
-                      </button>
-              
-                    <% end %>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
+                  Edit your Review
+                </button>
+              <% else %>
+                <% @review = Review.new %>
+                <!-- <button type="button" class="btn btn-danger">Create New Review</button> -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
+                  Create New Review
+                </button>
+
+              <% end %>
             </div>
           </div>
           <div class="col-md-8">
@@ -117,10 +122,10 @@
                 </div>
                 <div class="col-md-11">
                   <div class="col-md-12 user_review_space_top">
-                    <div class="name-user col-md-3"><%= review.user.full_name %> 
+                    <div class="name-user col-md-3"><%= review.user.full_name %>
                     </div>
                     <div class="col-md-3 fix-title-space star-user">
-                      <strong ><%= review.title %></strong>
+                      <strong><%= review.title %></strong>
                     </div>
                     <div class="col-md-3 star-user">
                       <div class="star_home_page stars-outer">
@@ -131,23 +136,23 @@
                       <div class="text-right"><%= review.created_at.to_date() %></div>
                     </div>
                   </div>
-<!--                   <div class="col-md-12 fix-title-space">
+                  <!--                   <div class="col-md-12 fix-title-space">
                     <span ><%= review.title %></span>
                   </div> -->
                   <div class="col-md-12 ">
-                    <div class="fix-content-review-space" style="margin: 20px 0px 15px 0px !important"><%=raw review.content[0..1000] + "....." %></div>
+                    <div class="fix-content-review-space" style="margin: 20px 0px 15px 0px !important"><%= raw review.content[0..1000] + "....." %></div>
                     <div>
                       <%= render "reviews/like", object: review %>
-                  
+
                       <strong class="space-i"><%= review.comments.count() %> comments</strong>
                       <strong class="space-i"><%= link_to review_path(id: review.id), method: :get do %>
-                        Full Review
-                      <% end %></strong>
+                          Full Review
+                        <% end %></strong>
                       <% if current_user == review.user %>
                         <a data-toggle="modal" data-target="#basicExampleModal">
-                             Edit
-                          </a>
-                          <strong>
+                          Edit
+                        </a>
+                        <strong>
                           <%= link_to review_path(id: review.id), method: :delete do %> Delete
                           <% end %>
                         </strong>
@@ -179,7 +184,7 @@
                               <% if current_user == comment.user %>
                                 <div class="text-right">
                                   <a href="#"><span class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></span></a> |
-                                    <a href="#"><span class="fa fa-trash-o fa-lg" aria-hidden="true"></span></a>
+                                  <a href="#"><span class="fa fa-trash-o fa-lg" aria-hidden="true"></span></a>
                                 </div>
                               <% end %>
                             </div>
@@ -242,30 +247,30 @@
       </div>
       <div class="modal-body">
 
-          <%= form_for @review do |f| %>
-            <div class="form-group">
-              <label for="title">Title</label>
-              <!-- <input type="text" class="form-control" id="title"> -->
-              <%= f.text_field :title, placeholder: @review.title, class: "form-control",required: "required"%>
+        <%= form_for @review do |f| %>
+          <div class="form-group">
+            <label for="title">Title</label>
+            <!-- <input type="text" class="form-control" id="title"> -->
+            <%= f.text_field :title, placeholder: @review.title, class: "form-control", required: "required" %>
+          </div>
+          <div class="form-group">
+            <div class="star-rating">
+              <span class="fa fa-star-o" data-rating="1"></span>
+              <span class="fa fa-star-o" data-rating="2"></span>
+              <span class="fa fa-star-o" data-rating="3"></span>
+              <span class="fa fa-star-o" data-rating="4"></span>
+              <span class="fa fa-star-o" data-rating="5"></span>
+              <%= f.number_field :rating, class: "rating-value", type: "hidden", name: "" %>
             </div>
-            <div class="form-group">
-              <div class="star-rating">
-                <span class="fa fa-star-o" data-rating="1"></span>
-                <span class="fa fa-star-o" data-rating="2"></span>
-                <span class="fa fa-star-o" data-rating="3"></span>
-                <span class="fa fa-star-o" data-rating="4"></span>
-                <span class="fa fa-star-o" data-rating="5"></span>
-                <%= f.number_field :rating, class: "rating-value", type: "hidden", name: "" %>
-              </div>
-            </div>
-            <%= hidden_field_tag :game_id, @game.id %>
-            <div class="form-group">
-              <!-- <label for="content">Contents</label> -->
-              <!-- <textarea class="form-control" rows="5" id="comment"></textarea> -->
-              <%= f.cktext_area :content, placeholder: @review.content, class: "form-control", required: "required" %>
-            </div>
-            <%= f.submit "Create", class: "btn btn-primary" %>
-          <% end %>
+          </div>
+          <%= hidden_field_tag :game_id, @game.id %>
+          <div class="form-group">
+            <!-- <label for="content">Contents</label> -->
+            <!-- <textarea class="form-control" rows="5" id="comment"></textarea> -->
+            <%= f.cktext_area :content, placeholder: @review.content, class: "form-control", required: "required" %>
+          </div>
+          <%= f.submit "Create", class: "btn btn-primary" %>
+        <% end %>
 
 
       </div>
