--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,9 @@
        </div>
     <div class="col-md-10" id="bs-example-navbar-collapse-1 ">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="#about" class="page-scroll">PC</a></li>
-        <li><a href="#services" class="page-scroll">PS4</a></li>
-        <li><a href="#portfolio" class="page-scroll">XBOX ONE</a></li>
+        <li><%= link_to "PC", game_game_list_of_platform_path, class: "page-scroll" %></li>
+        <li><%= link_to "PS4", game_game_list_of_platform_path(:platform => "PS4"), class: "page-scroll" %></li>
+        <li><%= link_to "XBox One", game_game_list_of_platform_path(:platform => "XBOX ONE"), class: "page-scroll" %></li>
         <li class="dropdown">
           <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#">MORE
             <span class="caret"></span>
