block/unblock user

--- a/app/views/manage/home/index.html.erb
+++ b/app/views/manage/home/index.html.erb
@@ -402,7 +402,7 @@
           </a>
           <ul class="treeview-menu">
             <li><a href="pages/tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-            <li><a href="pages/tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
+            <li><%= link_to manage_data_path do %> <i class="fa fa-circle-o"></i> User tables<% end %></li>
           </ul>
         </li>
         <li>
