--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,9 +50,9 @@
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><%=link_to "Profile" , user_profile_home_path() %>
+            <li><%=link_to "Profile" , user_profile_home_path(id: current_user.id) %>
             <% if current_user.is_admin %>
-            <li><a href="#">Admin</a></li>
+            <li><%= link_to manage_data_path do %>Admin</a><% end %></li>
             <% end %>
             <li><a href="#"><%= link_to('Sign Out', destroy_user_session_path, method: :delete) %> </a></li>
           </ul>
